header and content blue

--- a/index.html
+++ b/index.html
@@ -10,7 +10,35 @@
 
   <body>
     <div class="homepage">
-      <div class="navbar"></div>
+      <div class="navbar">
+        <div class="navbar-row">
+          <div class="navbar-row-title">
+            <p>luxstate</p>
+          </div>
+          <div class="navbar-row-btn">
+            <button>About</button>
+            <button>Apparetement</button>
+            <button>How it Work</button>
+            <button>Agent</button>
+            <button>Contact Us</button>
+            <button>Join Us</button>
+            <button>Getting Started</button>
+          </div>
+        </d>
+      </div>
+      <div class="hero">
+        <div class="hero-content">
+        </div>
+        <div class="hero-content-column">
+          <h1>Find Your New <br>Modern Apparetement</h1>
+          <div class="hero-content-row">
+            <input placeholder="Search" />
+            <button class="btn">Search</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="apparetement">
     </div>
   </body>
   <footer></footer>
