--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./apps/css/index.css" />
     <title>psd</title>
   </head>
@@ -12,8 +13,11 @@
     <div class="homepage">
       <div class="navbar">
         <div class="navbar-row">
-          <div class="navbar-row-title">
-            <p>luxstate</p>
+          <div class="navbar-row-logo">
+            <img 
+              src="./apps/images/logo.png"
+              alt="luxestate"
+            />
           </div>
           <div class="navbar-row-btn">
             <button>About</button>
@@ -30,15 +34,28 @@
         <div class="hero-content">
         </div>
         <div class="hero-content-column">
-          <h1>Find Your New <br>Modern Apparetement</h1>
+          <h1>Find Your New <br>Modern Appartement</h1>
           <div class="hero-content-row">
-            <input placeholder="Search" />
-            <button class="btn">Search</button>
+              <i class="fa fa-search fa-lg"></i>
+              <input placeholder="Search" />
+              <button>Search</button>
+          </div>
+        </div>
+        <div class="hero-footer">
+          <div class="hero-footer-info">
+            <div>
+              <i class="fa fa-phone fa-lg"></i>
+              <button>(000)123-4567</button>
+            </div>
+            <div>
+              <i class="fa fa-map-marker fa-lg"></i>
+              <button>Melboume,Australia</button>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="apparetement">
+    <div class="company">
     </div>
   </body>
   <footer></footer>
