--- a/index.html
+++ b/index.html
@@ -54,8 +54,35 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="company">
+      <div class="company">
+        <div class="company-row-primary">
+          <h2>Our's Company <br>Statics</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis corporis architecto nihil culpa ad laboriosam quasi reiciendis nostrum, consectetur dolorem odio repellat eos eum rem? Quibusdam nesciunt animi at sint?</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam maxime laboriosam, natus officiis sequi illum fugiat in hic corrupti ratione atque voluptas, praesentium qui officia minima similique eum facere provident!</p>
+        </div>
+        <div class="company-row-secondary">
+          <div class="card">
+            <div class="card-content">
+              <h2>748</h2>
+              <p>Appartements</p>
+            </div>
+            <div class="card-content">
+              <h2>3854</h2>
+              <p>Clients</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-content">
+              <h2>24</h2>
+              <p>Employees</p>
+            </div>
+            <div class="card-content">
+              <h2>14</h2>
+              <p>Awards</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
   <footer></footer>
