--- a/index.html
+++ b/index.html
@@ -1,33 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./apps/css/index.css" />
-    <title>psd</title>
-  </head>
 
-  <body>
-    <div class="homepage">
-      <div class="navbar">
-        <div class="navbar-row">
-          <div class="navbar-row-logo">
-            <img 
-              src="./apps/images/logo.png"
-              alt="luxestate"
-            />
-          </div>
-          <div class="navbar-row-btn">
-            <button>About</button>
-            <button>Apparetement</button>
-            <button>How it Work</button>
-            <button>Agent</button>
-            <button>Contact Us</button>
-            <button>Join Us</button>
-            <button>Getting Started</button>
-          </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="./apps/css/index.css" />
+  <title>psd</title>
+</head>
+
+<body>
+  <div class="homepage">
+    <div class="navbar">
+      <div class="navbar-row">
+        <div class="navbar-row-logo">
+          <img src="./apps/images/logo.png" alt="luxestate" />
+        </div>
+        <div class="navbar-row-btn">
+          <button>About</button>
+          <button>Apparetement</button>
+          <button>How it Work</button>
+          <button>Agent</button>
+          <button>Contact Us</button>
+          <button>Join Us</button>
+          <button>Getting Started</button>
+        </div>
         </d>
       </div>
       <div class="hero">
@@ -36,9 +34,9 @@
         <div class="hero-content-column">
           <h1>Find Your New <br>Modern Appartement</h1>
           <div class="hero-content-row">
-              <i class="fa fa-search fa-lg"></i>
-              <input placeholder="Search" />
-              <button>Search</button>
+            <i class="fa fa-search fa-lg"></i>
+            <input placeholder="Search" />
+            <button>Search</button>
           </div>
         </div>
         <div class="hero-footer">
@@ -49,7 +47,7 @@
             </div>
             <div>
               <i class="fa fa-map-marker fa-lg"></i>
-              <button>Melboume,Australia</button>
+              <button>Melbourne,Australia</button>
             </div>
           </div>
         </div>
@@ -57,8 +55,12 @@
       <div class="company">
         <div class="company-row-primary">
           <h2>Our's Company <br>Statics</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis corporis architecto nihil culpa ad laboriosam quasi reiciendis nostrum, consectetur dolorem odio repellat eos eum rem? Quibusdam nesciunt animi at sint?</p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam maxime laboriosam, natus officiis sequi illum fugiat in hic corrupti ratione atque voluptas, praesentium qui officia minima similique eum facere provident!</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis corporis architecto nihil culpa ad
+            laboriosam quasi reiciendis nostrum, consectetur dolorem odio repellat eos eum rem? Quibusdam nesciunt animi
+            at sint?</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam maxime laboriosam, natus officiis sequi illum
+            fugiat in hic corrupti ratione atque voluptas, praesentium qui officia minima similique eum facere
+            provident!</p>
         </div>
         <div class="company-row-secondary">
           <div class="card">
@@ -84,6 +86,60 @@
         </div>
       </div>
     </div>
-  </body>
-  <footer></footer>
+    <div class="appartement">
+      <h2>More Then 500+<br>Appartments For Rent</h2>
+      <div class="appart-container">
+        <div class="appart-card-primary">
+          <div class="appart-card-items">
+            <div class="appart-card-items-img"></div>
+            <div class="appart-card-items-info">
+              <span>Random Street, Apt B453, New York</span>
+            </div>
+          </div>
+        </div>
+        <div class="appart-card-primary">
+          <div class="appart-card-items">
+            <div class="appart-card-items-img"></div>
+            <div class="appart-card-items-info">
+              <span>Random Street, Apt B453, New York</span>
+            </div>
+          </div>
+        </div>
+        <div class="appart-card-primary">
+          <div class="appart-card-items">
+            <div class="appart-card-items-img"></div>
+            <div class="appart-card-items-info">
+              <span>Random Street, Apt B453, New York</span>
+            </div>
+          </div>
+        </div>
+        <div class="appart-card-primary">
+          <div class="appart-card-items">
+            <div class="appart-card-items-img"></div>
+            <div class="appart-card-items-info">
+              <span>Random Street, Apt B453, New York</span>
+            </div>
+          </div>
+        </div>
+        <div class="appart-card-primary">
+          <div class="appart-card-items">
+            <div class="appart-card-items-img"></div>
+            <div class="appart-card-items-info">
+              <span>Random Street, Apt B453, New York</span>
+            </div>
+          </div>
+        </div>
+        <div class="appart-card-primary">
+          <div class="appart-card-items">
+            <div class="appart-card-items-img"></div>
+            <div class="appart-card-items-info">
+              <span>Random Street, Apt B453, New York</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+</body>
+<footer></footer>
+
 </html>
