--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
       </div>
     </div>
-    <div class="appartement">
+    <div id="appartement">
       <h2>More Then 500+<br>Appartments For Rent</h2>
       <div class="appart-container">
         <div class="appart-card-primary">
@@ -94,6 +94,13 @@
             <div class="appart-card-items-img"></div>
             <div class="appart-card-items-info">
               <span>Random Street, Apt B453, New York</span>
+              <div class="appart-card-items-info-composite">
+                <span class="appart-card-items-info-composite-price">$3500</span>
+                <div class="appart-card-items-info-composite-shape">
+                  <span>2BA</span>
+                  <span>2BD</span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -102,6 +109,13 @@
             <div class="appart-card-items-img"></div>
             <div class="appart-card-items-info">
               <span>Random Street, Apt B453, New York</span>
+              <div class="appart-card-items-info-composite">
+                <span class="appart-card-items-info-composite-price">$3500</span>
+                <div class="appart-card-items-info-composite-shape">
+                  <span>2BA</span>
+                  <span>2BD</span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -110,6 +124,13 @@
             <div class="appart-card-items-img"></div>
             <div class="appart-card-items-info">
               <span>Random Street, Apt B453, New York</span>
+              <div class="appart-card-items-info-composite">
+                <span class="appart-card-items-info-composite-price">$3500</span>
+                <div class="appart-card-items-info-composite-shape">
+                  <span>2BA</span>
+                  <span>2BD</span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -118,6 +139,13 @@
             <div class="appart-card-items-img"></div>
             <div class="appart-card-items-info">
               <span>Random Street, Apt B453, New York</span>
+              <div class="appart-card-items-info-composite">
+                <span class="appart-card-items-info-composite-price">$3500</span>
+                <div class="appart-card-items-info-composite-shape">
+                  <span>2BA</span>
+                  <span>2BD</span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -126,6 +154,13 @@
             <div class="appart-card-items-img"></div>
             <div class="appart-card-items-info">
               <span>Random Street, Apt B453, New York</span>
+              <div class="appart-card-items-info-composite">
+                <span class="appart-card-items-info-composite-price">$3500</span>
+                <div class="appart-card-items-info-composite-shape">
+                  <span>2BA</span>
+                  <span>2BD</span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -134,6 +169,13 @@
             <div class="appart-card-items-img"></div>
             <div class="appart-card-items-info">
               <span>Random Street, Apt B453, New York</span>
+              <div class="appart-card-items-info-composite">
+                <span class="appart-card-items-info-composite-price">$3500</span>
+                <div class="appart-card-items-info-composite-shape">
+                  <span>2BA</span>
+                  <span>2BD</span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
