--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
               <div class="appart-card-items-info-composite">
                 <span class="appart-card-items-info-composite-price">$3500</span>
                 <div class="appart-card-items-info-composite-shape">
-                  <span>2BA</span>
-                  <span>2BD</span>
+                  <i class="fa-solid fa-shower"></i><span>2BA</span>
+                  <i class="fa-solid fa-bed"></i><span>2BD</span>
                 </div>
               </div>
             </div>
@@ -112,8 +112,8 @@
               <div class="appart-card-items-info-composite">
                 <span class="appart-card-items-info-composite-price">$3500</span>
                 <div class="appart-card-items-info-composite-shape">
-                  <span>2BA</span>
-                  <span>2BD</span>
+                  <i class="fa-solid fa-shower"></i><span>2BA</span>
+                  <i class="fa-solid fa-bed"></i><span>2BD</span>
                 </div>
               </div>
             </div>
@@ -127,8 +127,8 @@
               <div class="appart-card-items-info-composite">
                 <span class="appart-card-items-info-composite-price">$3500</span>
                 <div class="appart-card-items-info-composite-shape">
-                  <span>2BA</span>
-                  <span>2BD</span>
+                  <i class="fa-solid fa-shower"></i><span>2BA</span>
+                  <i class="fa-solid fa-bed"></i><span>2BD</span>
                 </div>
               </div>
             </div>
@@ -142,8 +142,8 @@
               <div class="appart-card-items-info-composite">
                 <span class="appart-card-items-info-composite-price">$3500</span>
                 <div class="appart-card-items-info-composite-shape">
-                  <span>2BA</span>
-                  <span>2BD</span>
+                  <i class="fa-solid fa-shower"></i><span>2BA</span>
+                  <i class="fa-solid fa-bed"></i><span>2BD</span>
                 </div>
               </div>
             </div>
@@ -157,8 +157,8 @@
               <div class="appart-card-items-info-composite">
                 <span class="appart-card-items-info-composite-price">$3500</span>
                 <div class="appart-card-items-info-composite-shape">
-                  <span>2BA</span>
-                  <span>2BD</span>
+                  <i class="fa-solid fa-shower"></i><span>2BA</span>
+                  <i class="fa-solid fa-bed"></i><span>2BD</span>
                 </div>
               </div>
             </div>
@@ -172,8 +172,8 @@
               <div class="appart-card-items-info-composite">
                 <span class="appart-card-items-info-composite-price">$3500</span>
                 <div class="appart-card-items-info-composite-shape">
-                  <span>2BA</span>
-                  <span>2BD</span>
+                  <i class="fa-solid fa-shower"></i><span>2BA</span>
+                  <i class="fa-solid fa-bed"></i><span>2BD</span>
                 </div>
               </div>
             </div>
@@ -181,6 +181,66 @@
         </div>
       </div>
     </div>
+    <div id="agents">
+      <h2>Meet Ours Agents</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis et hic aut recusandae, temporibus unde dicta
+        dignissimos consequuntur, quidem aliquam quia vel quibusdam amet odio quae minus dolorem saepe ut?</p>
+      <div class="agent-container">
+        <div class="agent-card-primary">
+          <div class="agent-card-items">
+            <div class="agent-card-items-img"></div>
+            <div class="agent-card-items-info">
+              <span>Agent</span>
+              <div class="agent-card-items-info-composite">
+                <span class="agent-card-items-info-composite-name">Mr. Luke Skywalker</span>
+                <div class="agent-card-items-info-composite-rs">
+                  <span><i class="fa-brands fa-facebook-f"></i></span>
+                  <span><i class="fa-brands fa-twitter"></i></span>
+                  <span><i class="fa-solid fa-basketball"></i></span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="agent-card-primary">
+          <div class="agent-card-items">
+            <div class="agent-card-items-img"></div>
+            <div class="agent-card-items-info">
+              <span>Agent</span>
+              <div class="agent-card-items-info-composite">
+                <span class="agent-card-items-info-composite-name">Mr. Luke Skywalker</span>
+                <div class="agent-card-items-info-composite-rs">
+                  <span><i class="fa-brands fa-facebook-f"></i></span>
+                  <span><i class="fa-brands fa-twitter"></i></span>
+                  <span><i class="fa-solid fa-basketball"></i></span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="agent-card-primary">
+          <div class="agent-card-items">
+            <div class="agent-card-items-img"></div>
+            <div class="agent-card-items-info">
+              <span>Agent</span>
+              <div class="agent-card-items-info-composite">
+                <span class="agent-card-items-info-composite-name">Mr. Luke Skywalker</span>
+                <div class="agent-card-items-info-composite-rs">
+                  <span><i class="fa-brands fa-facebook-f"></i></span>
+                  <span><i class="fa-brands fa-twitter"></i></span>
+                  <span><i class="fa-solid fa-basketball"></i></span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+
+  <script src="https://kit.fontawesome.com/2f5ff2a57b.js" crossorigin="anonymous"></script>
 </body>
 <footer></footer>
 
