--- a/index.html
+++ b/index.html
@@ -12,46 +12,50 @@
 
 <body>
   <div class="homepage">
-    <div class="navbar">
-      <div class="navbar-row">
-        <div class="navbar-row-logo">
-          <img src="./apps/images/logo.png" alt="luxestate" />
-        </div>
-        <div class="navbar-row-btn">
-          <button>About</button>
-          <button>Apparetement</button>
-          <button>How it Work</button>
-          <button>Agent</button>
-          <button>Contact Us</button>
-          <button>Join Us</button>
-          <button>Getting Started</button>
-        </div>
-        </d>
-      </div>
-      <div class="hero">
-        <div class="hero-content">
-        </div>
-        <div class="hero-content-column">
-          <h1>Find Your New <br>Modern Appartement</h1>
-          <div class="hero-content-row">
-            <i class="fa fa-search fa-lg"></i>
-            <input placeholder="Search" />
-            <button>Search</button>
+    <div class="content-wrapper">
+      <div class="navbar">
+        <div class="navbar-row">
+          <div class="navbar-row-logo">
+            <img src="./apps/images/logo.png" alt="luxestate" />
           </div>
+          <div class="navbar-row-btn">
+            <button>About</button>
+            <button>Apparetement</button>
+            <button>How it Work</button>
+            <button>Agent</button>
+            <button>Contact Us</button>
+            <button>Join Us</button>
+            <button>Getting Started</button>
+          </div>
+          </d>
         </div>
-        <div class="hero-footer">
-          <div class="hero-footer-info">
-            <div>
-              <i class="fa fa-phone fa-lg"></i>
-              <button>(000)123-4567</button>
-            </div>
-            <div>
-              <i class="fa fa-map-marker fa-lg"></i>
-              <button>Melbourne,Australia</button>
+        <div class="hero">
+          <div class="hero-content">
+          </div>
+          <div class="hero-content-column">
+            <h1>Find Your New <br>Modern Appartement</h1>
+            <div class="hero-content-row">
+              <i class="fa fa-search fa-lg"></i>
+              <input placeholder="Search" />
+              <button>Search</button>
             </div>
           </div>
+          <div class="hero-footer">
+            <div class="hero-footer-info">
+              <div>
+                <i class="fa fa-phone fa-lg"></i>
+                <button>(000)123-4567</button>
+              </div>
+              <div>
+                <i class="fa fa-map-marker fa-lg"></i>
+                <button>Melbourne,Australia</button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+    </div>
+    <div class="content-wrapper">
       <div class="company">
         <div class="company-row-primary">
           <h2>Our's Company <br>Statics</h2>
@@ -60,7 +64,8 @@
             at sint?</p>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam maxime laboriosam, natus officiis sequi illum
             fugiat in hic corrupti ratione atque voluptas, praesentium qui officia minima similique eum facere
-            provident!</p>
+            provident!
+          </p>
         </div>
         <div class="company-row-secondary">
           <div class="card">
@@ -86,7 +91,9 @@
         </div>
       </div>
     </div>
-    <div id="appartement">
+  </div>
+  <div id="appartement">
+    <div class="content-wrapper">
       <h2>More Then 500+<br>Appartments For Rent</h2>
       <div class="appart-container">
         <div class="appart-card-primary">
@@ -181,9 +188,12 @@
         </div>
       </div>
     </div>
-    <div id="agents">
+  </div>
+  <div id="agents">
+    <div class="content-wrapper">
       <h2>Meet Ours Agents</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis et hic aut recusandae, temporibus unde dicta
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis et hic aut recusandae, temporibus unde
+        dicta
         dignissimos consequuntur, quidem aliquam quia vel quibusdam amet odio quae minus dolorem saepe ut?</p>
       <div class="agent-container">
         <div class="agent-card-primary">
@@ -236,6 +246,7 @@
         </div>
       </div>
     </div>
+  </div>
 
   </div>
 
