--- a/index.html
+++ b/index.html
@@ -190,6 +190,71 @@
 
     </div>
   </div>
+
+  <section id="howitworks">
+    <div class="howitworks-title">
+    <h2>How it works?</h2>
+    <p>in this space market-facing,yet UI work flows, or bake it in.
+    Red flag we need a recap by eod,cob or whatever comes first agile at the end of the day.</p>
+    </div>
+    <div class="howitworks-gridcontainers">
+        <div class="howitworks-gridesn1">
+            <h3>01</h3>
+            <h4>01  Find Your Location</h4>
+            <p>In this space market-facing, yet UI work flows.
+                or bake it in.Red flag we neef the day.</p>
+            <a href="">Find Location</a>
+
+        </div>
+        <div class="howitworks-grides">
+            <h3>02</h3>
+            <h4>02  Find Appartment</h4>
+            <p>In this space market-facing, yet UI work flows.
+                or bake it in.Red flag we neef the day.</p>
+            <a href="">Find Appart</a>
+        </div>
+        <div class="howitworks-grides">
+            <h3>03</h3>
+            <h4>03 Make Contact</h4>
+            <p>In this space market-facing, yet UI work flows.
+                or bake it in.Red flag we neef the day.</p>
+            <a href="">Make Contact</a>
+        </div>
+    </div>
+  </section>
+
+
+  <section id="services">
+    <div class="services-title">
+        <h2>Services</h2>
+    <p>In this space market-facing, yet UI work flows.</p>
+    <p>or bake it in.Red flag we neef the day.</p>
+    </div>
+    <div class="services-gridcontainer">
+        <div class="services-griden1">
+
+        </div>
+        <div class="services-gride">
+            <h3>Renting</h3>
+            <p>In this space market-facing, yet UI work flows.
+            or bake it in.Red flag we neef the day.
+            In this space market-facing, yet UI work flows.
+            or bake it in.Red flag we neef the day.</p>
+            <h3>Selling</h3>
+            <p>In this space market-facing, yet UI work flows.
+            or bake it in.Red flag we neef the day.
+            In this space market-facing, yet UI work flows.
+            or bake it in.Red flag we neef the day.</p>
+            <h3>Building</h3>
+            <p>In this space market-facing, yet UI work flows.
+            or bake it in.Red flag we neef the day.
+            In this space market-facing, yet UI work flows.
+            or bake it in.Red flag we neef the day.</p>
+        </div>
+    </div>
+  </section>
+
+
   <div id="agents">
     <div class="content-wrapper">
       <h2>Meet Ours Agents</h2>
@@ -248,12 +313,108 @@
       </div>
     </div>
   </div>
+  <section id="awesome">
+    <div class="awesome-gride">
+        <div class="gride-gray">
+            <div class="gride-gray-elt">
+                <p><i class="fa-solid fa-location-dot">
+                </i><span>Melbourne,Australia</span></p>
+            </div>
+        </div>
+    </div>
+    <div class="awesome-gride">
+        <div class="gride-white">
+            <h2>Super Awesome Add</h2>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.Lremer ,kzennlfrnalnfnalncqlneo
+                Atque ab assumenda sit perspiciatis molestias sunt iste est perferendis.
+                Perspiciatis distinctio quasi rerum provident est debitis nesciunt ex id molestiae soluta.
+            </p>
+        </div>
+    </div>
+    <div class="awesome-gride">
+        <div class="gride-whiten2">
+            <h2>Super Awesome Add</h2>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.Lremer ,kzennlfrnalnfnalncqlneo
+                Atque ab assumenda sit perspiciatis molestias sunt iste est perferendis.
+                Perspiciatis distinctio quasi rerum provident est debitis nesciunt ex id molestiae soluta.
+            </p>
+        </div>
+    </div>
+    <div class="awesome-gride">
+        <div class="gride-gray">
+            <div class="gride-gray-eltn2">
+                <p><i class="fa-solid fa-location-dot">
+                </i><span>Melbourne,Australia</span></p>
+            </div>
+        </div>
+    </div>
+    <div class="awesome-gride">
+        <div class="gride-gray">
 
-  </div>
-
-
-  <script src="https://kit.fontawesome.com/2f5ff2a57b.js" crossorigin="anonymous"></script>
+        </div>
+    </div>
+    <div class="awesome-gride">
+        <div class="gride-whiten3">
+            <h2>Super Awesome Add</h2>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.Lremer ,kzennlfrnalnfnalncqlneo
+                Atque ab assumenda sit perspiciatisezajfioajnnodh
+            </p>
+            <button>Show Me More</button>
+        </div>
+    </div>
+  </section>
 </body>
-<footer></footer>
-
+<footer>
+  <div class="footer-head">
+    <h2>luxestate<br/>
+    Explore Real Estate</h2>
+    <form>
+        <div class="footer-head-input">
+            <span class="icon"><i class="fa-solid fa-arrow-right-long"></i></span>
+            <input type="text" id="fname" name="fname" 
+            placeholder="      Subscribe To Our Newsletter">
+        </div>
+    </form>
+  </div>
+      <span class="footer-head-divider"></span>
+  <div class="footer-grid">
+      <div class="footer-grid-elt1">
+          <h3>luxestate</h3>
+          <p>@ 2019 - luxestate,</p>
+          <p>All Right Reserved</p>    
+      </div>
+      <div class="footer-grid-elt2">
+          <h4>LUXESTATE</h4>
+          <ul>
+              <li><a href="">Agents</a></li>
+              <li><a href="">Hunters</a></li>
+          </ul>
+      </div>
+      <div class="footer-grid-elt3">
+          <h4>COMPANY</h4>
+          <ul>
+              <li><a href="">About</a></li>
+              <li><a href="">FAQ</a></li>
+              <li><a href="">Contact</a></li>
+              <li><a href="">Social</a></li>
+          </ul>
+      </div>
+      <div class="footer-grid-elt4">
+          <h4>PRODUCT</h4>
+          <ul>
+              <li><a href="">Appartments</a></li>
+              <li><a href="">How it Works</a></li>
+          </ul>
+      </div>
+      <div class="footer-grid-elt5">
+          <h4>SERVICES</h4>
+          <ul>
+              <li><a href="">Renting</a></li>
+              <li><a href="">Selling</a></li>
+              <li><a href="">Building</a></li>
+          </ul>
+      </div>
+  </div>
+  <script src="https://kit.fontawesome.com/2f5ff2a57b.js" crossorigin="anonymous"></script>
+</footer>
 </html>
